--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -5,5 +5,5 @@ ENV MYSQL_ROOT_PASSWORD=ExpenseApp@1 \
     MYSQL_USER=expense \
     MYSQL_PASSWORD=ExpenseApp@1 \
     MYSQL_DATABASE=transactions
-RUN chown -R expensive:expense /var/lib/mysql /var/run/mysqld
+RUN chown -R expensive:expensive /var/lib/mysql /var/run/mysqld
 COPY scripts/*.sql /docker-entrypoint-initdb.d/
