--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:20.15.0-alpine3.20
 EXPOSE 8080
 ENV DB_HOST=mysql
-RUN adduser expense
+RUN useradd expensive
 RUN chown expensive:expensive -R /opt/server
 #RUN addgroup -S expense && adduser -S expensive -G expense \
 #   && mkdir /opt/server \
