--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,7 +3,7 @@ EXPOSE 8080
 ENV DB_HOST=mysql
 RUN useradd expense
 RUN mkdir /opt/server
-RUN chown expensive:expensive -R /opt/server
+RUN chown expense:expensive -R /opt/server
 #RUN addgroup -S expense && adduser -S expensive -G expense \
 #   && mkdir /opt/server \
 #    && chown expensive:expensive -R /opt/server
